<resources>
    <string name="app_name">Story App</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="description">Description</string>
    <string name="story_image">Story Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_doesn_t_match">Password doesn\'t match</string>
    <string name="email_is_already_taken">Email is already taken</string>
    <string name="something_went_wrong">Something went wrong, please try again later</string>
    <string name="success">Success</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="minimum_8_characters">Password must be at least 8 characters</string>
    <string name="post_story_button">Post Story Button</string>
    <string name="setting">Setting</string>
    <string name="add_photo">Add Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_a_description">Add a description</string>
    <string name="upload">Upload</string>
    <string name="log_out">Log Out</string>
    <string name="change_language">Change Language</string>
    <string name="capture_button">Capture Button</string>
    <string name="switch_camera_button">Switch Camera Button</string>
    <string name="change">Change</string>
    <string name="wrong_account">The email address or password that you\'ve entered doesn\'t match any account.</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="post_story">Post Story</string>
    <string name="failed_to_get_permission">Failed to get permission</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="failed_to_take_picture">Failed to take picture.</string>
    <string name="failed_to_start_camera">Failed to start camera.</string>
    <string name="detail_story">Detail Story</string>
    <string name="logo">Logo</string>
    <string name="story_has_been_uploaded">Story has been uploaded</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="unable_to_get_permission">Unable to get permission</string>
    <string name="camera_request_title">would Like to Access the Camera</string>
    <string name="camera_request_msg">This lets you do things like take and share photos</string>
    <string name="error" translatable="false">Error</string>
    <string name="enable_location">Enable location</string>
    <string name="maps">Maps</string>
    <string name="timeout">Request Timeout</string>
    <string name="retry">Retry</string>
</resources>